--- a/masapihelper-master/templates/index.html
+++ b/masapihelper-master/templates/index.html
@@ -20,7 +20,7 @@
     <!-- datatables -->
     <link href="/static/css/datatables/jquery.dataTables.min.css" rel="stylesheet">
 
-    <title>CI360 API Helpers</title>
+    <title>Sample web app calling realtime SAS Viya API</title>
 
     <!-- Bootstrap -->
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
